--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,10 @@
           <a routerLink="/home">Home</a>
         </li>
         <li>
-          <a routerLink="/repo-info">Get Repostories</a>
+          <a routerLink="/user-repo-info">User Repositories</a>
+        </li>
+        <li>
+          <a routerLink="/repo-info">Search Repositories</a>
         </li>
       </ul>
     </div>
