--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<h3 align="center">Welcome To Git Search App</h3>
+<h3 align="center">Search User Details</h3>
 
 <div class="well well-sm">
   <label>GitHub Name</label><br>
